tests/error/array_err2.gw
// [contains] partially empty array init
int i[2][];
